--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -31,6 +36,7 @@ button {
 }
 
 .wave {
+  display: none;
   position: absolute;
   left: 0;
   width: 100%;
@@ -298,6 +304,106 @@ button {
 .about-text {
   max-width: 700px;
   font-size: 20px;
+  margin: 0;
+}
+
+.products {
+  background: #6083ab;
+}
+
+.products-title {
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+.products-subtitle {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 100px;
+  font-size: 16px;
+}
+
+.products-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.products-icon {
+  font-size: 10px;
+  color: rgba(62, 62, 62, 0.5);
+  cursor: pointer;
+}
+
+.products-item {
+  background: #fff;
+  width: 540px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  border-radius: 20px;
+  -webkit-box-shadow: 0 10px 10px rgba(62, 62, 62, 0.35);
+          box-shadow: 0 10px 10px rgba(62, 62, 62, 0.35);
+  margin-bottom: 50px;
+  overflow: hidden;
+}
+
+.products-item__img {
+  max-width: 180px;
+}
+
+.products-item__img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  vertical-align: middle;
+}
+
+.products-item__content {
+  width: 360px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.products-item__text {
+  padding: 10px 15px 30px 20px;
+}
+
+.products-item__list {
+  padding-left: 10px;
+}
+
+.products-item__button {
+  width: 100%;
+  line-height: 60px;
+  border: none;
+  background: #6083ab;
+  color: #ffffff;
+  font-size: 20px;
+  font-family: "Gilroy-Black", sans-serif;
+  font-weight: 900;
+  border-radius: 0;
+}
+
+.products-item__title {
+  font-size: 25px;
+  font-family: "Gilroy-Black", sans-serif;
+  font-weight: 900;
   margin: 0;
 }
 
