--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -1,3 +1,5 @@
+* 
+  box-sizing: border-box
 body
   margin: 0
   padding: 0
@@ -19,6 +21,7 @@ button
   padding-top: 150px
   padding-bottom: 160px
 .wave
+  display: none
   position: absolute
   left: 0
   width: 100%
