--- a/sass/_about.sass
+++ b/sass/_about.sass
@@ -1,7 +1,7 @@
 .about
   position: relative
-  background: $active_alt
-  color: #fff
+  color: $black
+  background: #fff
   .container
     display: flex
     justify-content: center
@@ -11,3 +11,10 @@
     max-width: 700px
     font-size: $text
     margin: 0
+  &-blue
+    color: #fff
+    background: $active_alt
+    .wave
+      svg
+        path
+          fill: $active_alt
