--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -17,16 +17,15 @@ img
 button
   font-family: inherit
 .section
-  overflow-y: visible
   padding-top: 150px
-  padding-bottom: 160px
+  padding-bottom: 100px
 .wave
-  display: none
+  // display: none
   position: absolute
   left: 0
   width: 100%
   overflow: hidden
-  bottom: 0
+  bottom: 5px
   transform: translateY(100%)
   z-index: 3
   svg
@@ -38,3 +37,31 @@ button
   font-weight: 900
   margin: 0
   margin-bottom: 90px
+.button
+  cursor: pointer
+  position: relative
+  font-family: "Gilroy-Bold", sans-serif
+  line-height: 80px
+  font-size: $h2
+  color: #ffffff
+  background: rgba(#1C4F88, 0.7)
+  border-radius: 50px
+  border: none
+  padding: 0 50px
+  z-index: 1
+  transition: 0.5s all ease-out
+  &::after
+    transition: 0.5s all ease-out
+    content: '' 
+    position: absolute
+    height: 100%
+    width: 100%
+    border-radius: 50px
+    background: rgba(#1C4F88, 0.7)
+    top: 4px
+    left: 0
+    z-index: -1
+  &:hover
+    background: $active_alt
+  &:hover:after
+    background: $active_alt
