--- a/sass/_products.sass
+++ b/sass/_products.sass
@@ -2,6 +2,8 @@
   background: $active_alt
   position: relative
   padding-bottom: 50px
+  &_best
+    margin-top: -50px
   &-button
     display: block
     margin: 50px auto
