--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -5,6 +5,9 @@
     display: flex
     flex-direction: column
     justify-content: space-between
+    padding-bottom: 50px
+  .wave
+    bottom: 50px
   &-text
     margin-left: 50px
     // margin-bottom: 130px
@@ -25,7 +28,8 @@
     width: 830px
     z-index: -1
   &-brends
-    margin-bottom: 20px
+    position: relative
+    z-index: 4
     &__title
       font-size: 18px
       margin-bottom: 30px
