--- a/sass/_about.sass
+++ b/sass/_about.sass
@@ -18,3 +18,10 @@
       svg
         path
           fill: $active_alt
+
+@media screen and ( max-width: 768px )
+  .about
+    &-text
+      text-align: center
+      font-size: 16px
+  
