--- a/sass/_products.sass
+++ b/sass/_products.sass
@@ -6,7 +6,7 @@
     margin-top: -50px
   &-button
     display: block
-    margin: 50px auto
+    margin: 50px auto 0
   &-title
     color: #fff
     margin-bottom: 20px
@@ -22,14 +22,14 @@
       margin-right: 40px
       .fas
         position: absolute
-        right: 10px
+        right: 20px
         top: 50%
         transform: translateY(-50%)
         transition: all 0.3s ease-out
-        
         &_active
           transform: translateY(-50%) rotateX(180deg)
     &__select
+      z-index: 4
       overflow: hidden
       // display: none
       width: 190px
@@ -52,6 +52,7 @@
           background: darken(#f6f6f6,  10)
           cursor: pointer
       &_value
+        height: 40px
         position: relative
         cursor: pointer
         margin-left: 5px
@@ -61,17 +62,16 @@
         font-family: inherit
         text-transform: lowercase
         font-size: 18px
-        padding: 10px 0
+        padding: 10px 25px 10px 15px
         width: 190px
         text-align: center
         &:focus
           outline: none
           border: 1px solid $black
-        
     &__input
       margin-left: 5px
-      line-height: 40px
       width: 350px
+      height: 40px
       padding-left: 20px
       padding-right: 50px
       border: 1px solid #dcdcdc
@@ -92,6 +92,8 @@
     justify-content: space-between
     flex-wrap: wrap
     padding: 0 50px
+    &__wrapper
+      margin-bottom: 50px
     &_best
       .products-item:nth-child(5)
         margin-left: auto
@@ -100,12 +102,40 @@
       display: flex
       align-items: center
       margin-bottom: 50px
+      position: relative
+      padding-left: 10px
+      .fas
+        margin-left: 15px
       &__text
+        cursor: pointer
         font-size: 18px
-        margin: 0 10px
         font-weight: 400
+        margin: 0
+        display: flex
+        align-items: center
       &__img
+        margin-right: 15px
         max-height: 40px
+        position: relative
+        &::before
+          position: absolute
+          content: ''
+          width: 1px  
+          top: 0
+          height: 20px
+          background: rgba($black, 0.5)
+          left: -10px
+      &__descr
+        top: -5px
+        position: absolute
+        left: 0
+        transform: translateY(-100%)
+        border: 1px solid #dcdcdc
+        background: #f6f6f6
+        border-radius: 10px
+        font-size: 18px
+        padding: 10px
+        box-shadow: 0 5px 5px rgba($black, 0.35)
 
   &-icon
     font-size: 10px
@@ -126,6 +156,8 @@
         height: 100%
         object-fit: cover
         vertical-align: middle
+      &_mobile
+        display: none
     &__content
       width: 70%
       height: 100%
@@ -156,13 +188,14 @@
       font-weight: 900
       margin: 0
     &__descr
-      top: -20px
-      display: block
+      top: 0px
       position: absolute
-      background: #fff
-      z-index: 1
-      border: 1px solid rgba($black, 0.5)
+      left: 0
+      transform: translateY(-100%)
+      border: 1px solid #dcdcdc
+      background: #f6f6f6
       border-radius: 10px
+      font-size: 18px
       padding: 10px
       box-shadow: 0 5px 5px rgba($black, 0.35)
   &_all
@@ -170,3 +203,78 @@
     .products-title
       color: $black
       margin-bottom: 100px
+
+@media screen and ( max-width:  768px)
+  .products
+    margin-top: 0
+    &-title
+      margin-bottom: 15px
+    &-subtitle
+      font-size: 14px
+      margin-bottom: 35px
+    &-items
+      padding: 0
+      justify-content: flex-start
+      align-items: center
+      flex-direction: column
+      &__wrapper
+        margin-bottom: 30px
+      &__title
+        flex-wrap: wrap
+        align-items: flex-end
+        margin-bottom: 30px
+        &__text
+          margin-top: 10px
+    &-item
+      width: 280px
+      height: auto
+      margin-bottom: 30px
+      &__img
+        display: none
+        &_mobile
+          display: block
+          margin: 15px auto 0
+          text-align: center
+          img
+            max-height: 170px
+
+      &__content
+        width: 100%
+      &__text
+        padding: 20px 10px 20px 20px
+        font-size: 14px
+        height: auto
+      &__list
+        line-height: 1.4
+      &__title
+        font-size: 18px
+    &-button
+      margin: 0 auto
+      font-size: 16px
+      padding: 0 20px
+    &_all
+      .products-title
+        margin-bottom: 15px
+    &-form
+      font-size: 16px
+      flex-wrap: wrap
+      &__group
+        &:nth-child(1)
+          order: 2
+          margin-top: 20px
+          margin-right: 0   
+      &__input
+        margin-left: 15px
+        width: 220px
+      &__select
+        width: 150px
+        &_value
+          margin-left: 15px
+          width: 150px
+          font-size: 16px
+          padding-right: 10px
+          padding-left: 0
+          .fas
+            right: 5px
+    
+          
