--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ img {
 }
 
 .container {
-  padding: 0 15px;
+  padding: 0 20px;
   margin: 0 auto;
   max-width: 1400px;
 }
@@ -59,6 +59,7 @@ button {
 }
 
 .button {
+  display: block;
   cursor: pointer;
   position: relative;
   font-family: "Gilroy-Bold", sans-serif;
@@ -96,12 +97,35 @@ button {
   background: #6083ab;
 }
 
+@media screen and (max-width: 768px) {
+  .button {
+    padding: 0 44px;
+    line-height: 52px;
+    font-size: 20px;
+  }
+  .section {
+    padding-top: 70px;
+    padding-bottom: 50px;
+  }
+  .title {
+    font-size: 20px;
+    margin-bottom: 25px;
+  }
+  .wave {
+    bottom: 1px;
+  }
+}
+
 .header {
   position: fixed;
   width: 100%;
   padding: 15px 0;
   background: #fff;
   z-index: 10;
+}
+
+.header_mobile {
+  display: none;
 }
 
 .header .container {
@@ -121,7 +145,11 @@ button {
   cursor: pointer;
 }
 
-.header-menu ul {
+.header-menu__button {
+  display: none;
+}
+
+.header-menu__list {
   font-size: 20px;
   margin: 0;
   padding: 0;
@@ -134,16 +162,16 @@ button {
           align-items: center;
 }
 
-.header-menu ul li {
+.header-menu__list li {
   margin: 0 15px;
 }
 
-.header-menu ul li a {
+.header-menu__list li a {
   color: #3e3e3e;
   text-decoration: none;
 }
 
-.header-menu ul li a:hover {
+.header-menu__list li a:hover {
   text-decoration: underline;
   color: #39b54a;
 }
@@ -183,6 +211,57 @@ button {
   text-decoration: underline;
 }
 
+@media screen and (max-width: 768px) {
+  .header {
+    padding: 10px 0;
+  }
+  .header_mobile {
+    display: none;
+  }
+  .header-menu {
+    display: none;
+  }
+  .header-menu__button {
+    display: block;
+    cursor: pointer;
+    position: relative;
+    height: 24px;
+    width: 30px;
+  }
+  .header-menu__button span {
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  .header-menu__button span, .header-menu__button::after, .header-menu__button::before {
+    display: block;
+    width: 100%;
+    height: 3px;
+    background: #3e3e3e;
+    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+  }
+  .header-menu__button::after {
+    content: '';
+    top: 0;
+  }
+  .header-menu__button::before {
+    content: '';
+    top: auto;
+    bottom: 0;
+  }
+  .header-contact {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .header-logo {
+    width: 110px;
+  }
+}
+
 .main {
   position: relative;
 }
@@ -203,7 +282,7 @@ button {
 }
 
 .main .wave {
-  bottom: 50px;
+  bottom: 52px;
 }
 
 .main-text {
@@ -212,7 +291,7 @@ button {
 }
 
 .main-text__title {
-  line-height: 62px;
+  line-height: 1.2;
   margin: 0;
   font-family: "Gilroy-Black", sans-serif;
   font-weight: 900;
@@ -283,6 +362,67 @@ button {
   max-height: 40px;
 }
 
+@media screen and (max-width: 768px) {
+  .main .wave {
+    bottom: 1px;
+  }
+  .main .container {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    height: auto;
+    padding-top: 110px;
+    padding-bottom: 30px;
+  }
+  .main-text {
+    margin-left: 0;
+    margin-bottom: 50px;
+  }
+  .main-text__title {
+    font-size: 25px;
+    margin-bottom: 0;
+  }
+  .main-text__button {
+    margin: 0 auto;
+  }
+  .main-img {
+    position: relative;
+    -webkit-transform: none;
+            transform: none;
+    top: auto;
+    right: auto;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 565px) {
+  .main-brends__title {
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+  .main-brends__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .main-brends__list li {
+    margin-bottom: 30px;
+  }
+  .main-brends__list li span {
+    margin: 0 20px;
+  }
+  .main-brends__list li:nth-child(2) {
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+  }
+  .main-brends__list li:nth-child(2) span {
+    display: none;
+  }
+}
+
 .about {
   position: relative;
   color: #3e3e3e;
@@ -320,6 +460,13 @@ button {
   fill: #6083ab;
 }
 
+@media screen and (max-width: 768px) {
+  .about-text {
+    text-align: center;
+    font-size: 16px;
+  }
+}
+
 .products {
   background: #6083ab;
   position: relative;
@@ -332,7 +479,7 @@ button {
 
 .products-button {
   display: block;
-  margin: 50px auto;
+  margin: 50px auto 0;
 }
 
 .products-title {
@@ -364,7 +511,7 @@ button {
 
 .products-form__group .fas {
   position: absolute;
-  right: 10px;
+  right: 20px;
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
@@ -378,6 +525,7 @@ button {
 }
 
 .products-form__select {
+  z-index: 4;
   overflow: hidden;
   width: 190px;
   position: absolute;
@@ -413,6 +561,7 @@ button {
 }
 
 .products-form__select_value {
+  height: 40px;
   position: relative;
   cursor: pointer;
   margin-left: 5px;
@@ -422,7 +571,7 @@ button {
   font-family: inherit;
   text-transform: lowercase;
   font-size: 18px;
-  padding: 10px 0;
+  padding: 10px 25px 10px 15px;
   width: 190px;
   text-align: center;
 }
@@ -434,8 +583,8 @@ button {
 
 .products-form__input {
   margin-left: 5px;
-  line-height: 40px;
   width: 350px;
+  height: 40px;
   padding-left: 20px;
   padding-right: 50px;
   border: 1px solid #dcdcdc;
@@ -469,6 +618,10 @@ button {
   padding: 0 50px;
 }
 
+.products-items__wrapper {
+  margin-bottom: 50px;
+}
+
 .products-items_best .products-item:nth-child(5) {
   margin-left: auto;
   margin-right: auto;
@@ -482,16 +635,56 @@ button {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 50px;
+  position: relative;
+  padding-left: 10px;
+}
+
+.products-items__title .fas {
+  margin-left: 15px;
 }
 
 .products-items__title__text {
+  cursor: pointer;
   font-size: 18px;
-  margin: 0 10px;
   font-weight: 400;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .products-items__title__img {
+  margin-right: 15px;
   max-height: 40px;
+  position: relative;
+}
+
+.products-items__title__img::before {
+  position: absolute;
+  content: '';
+  width: 1px;
+  top: 0;
+  height: 20px;
+  background: rgba(62, 62, 62, 0.5);
+  left: -10px;
+}
+
+.products-items__title__descr {
+  top: -5px;
+  position: absolute;
+  left: 0;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  border: 1px solid #dcdcdc;
+  background: #f6f6f6;
+  border-radius: 10px;
+  font-size: 18px;
+  padding: 10px;
+  -webkit-box-shadow: 0 5px 5px rgba(62, 62, 62, 0.35);
+          box-shadow: 0 5px 5px rgba(62, 62, 62, 0.35);
 }
 
 .products-icon {
@@ -525,6 +718,10 @@ button {
   -o-object-fit: cover;
      object-fit: cover;
   vertical-align: middle;
+}
+
+.products-item__img_mobile {
+  display: none;
 }
 
 .products-item__content {
@@ -576,13 +773,15 @@ button {
 }
 
 .products-item__descr {
-  top: -20px;
-  display: block;
+  top: 0px;
   position: absolute;
-  background: #fff;
-  z-index: 1;
-  border: 1px solid rgba(62, 62, 62, 0.5);
+  left: 0;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  border: 1px solid #dcdcdc;
+  background: #f6f6f6;
   border-radius: 10px;
+  font-size: 18px;
   padding: 10px;
   -webkit-box-shadow: 0 5px 5px rgba(62, 62, 62, 0.35);
           box-shadow: 0 5px 5px rgba(62, 62, 62, 0.35);
@@ -595,6 +794,113 @@ button {
 .products_all .products-title {
   color: #3e3e3e;
   margin-bottom: 100px;
+}
+
+@media screen and (max-width: 768px) {
+  .products {
+    margin-top: 0;
+  }
+  .products-title {
+    margin-bottom: 15px;
+  }
+  .products-subtitle {
+    font-size: 14px;
+    margin-bottom: 35px;
+  }
+  .products-items {
+    padding: 0;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .products-items__wrapper {
+    margin-bottom: 30px;
+  }
+  .products-items__title {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    margin-bottom: 30px;
+  }
+  .products-items__title__text {
+    margin-top: 10px;
+  }
+  .products-item {
+    width: 280px;
+    height: auto;
+    margin-bottom: 30px;
+  }
+  .products-item__img {
+    display: none;
+  }
+  .products-item__img_mobile {
+    display: block;
+    margin: 15px auto 0;
+    text-align: center;
+  }
+  .products-item__img_mobile img {
+    max-height: 170px;
+  }
+  .products-item__content {
+    width: 100%;
+  }
+  .products-item__text {
+    padding: 20px 10px 20px 20px;
+    font-size: 14px;
+    height: auto;
+  }
+  .products-item__list {
+    line-height: 1.4;
+  }
+  .products-item__title {
+    font-size: 18px;
+  }
+  .products-button {
+    margin: 0 auto;
+    font-size: 16px;
+    padding: 0 20px;
+  }
+  .products_all .products-title {
+    margin-bottom: 15px;
+  }
+  .products-form {
+    font-size: 16px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .products-form__group:nth-child(1) {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin-top: 20px;
+    margin-right: 0;
+  }
+  .products-form__input {
+    margin-left: 15px;
+    width: 220px;
+  }
+  .products-form__select {
+    width: 150px;
+  }
+  .products-form__select_value {
+    margin-left: 15px;
+    width: 150px;
+    font-size: 16px;
+    padding-right: 10px;
+    padding-left: 0;
+  }
+  .products-form__select_value .fas {
+    right: 5px;
+  }
 }
 
 .footer {
@@ -644,5 +950,31 @@ button {
 
 .footer-small {
   text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .footer-items {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: 16px;
+    margin-bottom: 50px;
+  }
+  .footer-item__link {
+    margin-bottom: 20px;
+  }
+  .footer-item > ul {
+    margin-bottom: 30px;
+  }
+  .footer-item:nth-child(2) {
+    margin-left: 30px;
+  }
+  .footer-devs {
+    font-size: 14px;
+  }
+  .footer-small {
+    font-size: 14px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
