--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -29,3 +29,21 @@
   &-small
     text-align: center
     
+@media screen and ( max-width: 768px )
+  .footer
+    &-items
+      flex-direction: column
+      font-size: 16px
+      margin-bottom: 50px
+    &-item
+      &__link
+        margin-bottom: 20px
+      & > ul
+        margin-bottom: 30px
+      &:nth-child(2)
+        margin-left: 30px
+    &-devs
+      font-size: 14px
+    &-small
+      font-size: 14px
+  
