--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -4,6 +4,8 @@
   padding: 15px 0
   background: #fff
   z-index: 10
+  &_mobile
+    display: none
   .container
     display: flex
     justify-content: space-between
@@ -12,7 +14,9 @@
     width: 200px
     cursor: pointer
   &-menu
-    ul
+    &__button
+      display: none
+    &__list
       font-size: $text
       margin: 0
       padding: 0
@@ -48,3 +52,43 @@
       border: none
       cursor: pointer
 
+@media screen and ( max-width: 768px )
+  .header
+    padding: 10px 0
+    &_mobile
+      display: none
+    &-menu
+      display: none
+      &__button
+        display: block
+        cursor: pointer
+        position: relative
+        height: 24px
+        width: 30px
+        span
+          transform: translateY(-50%)
+        span, &::after, &::before
+          display: block
+          width: 100%
+          height: 3px
+          background: $black
+          border-radius: 10px
+          position: absolute
+          top: 50%
+          left: 0
+        &::after
+          content: ''
+          top: 0
+        &::before
+          content: ''
+          top: auto
+          bottom: 0
+    &-contact
+      display: none
+
+@media screen and ( max-width: 576px )
+  .header
+    &-logo
+      width: 110px
+  
+  
