--- a/sass/_about.sass
+++ b/sass/_about.sass
@@ -14,10 +14,11 @@
   &-blue
     color: #fff
     background: $active_alt
-    .wave
+    .wave, .wave_m
       svg
         path
           fill: $active_alt
+          
 
 @media screen and ( max-width: 768px )
   .about
