--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -31,6 +31,9 @@
     
 @media screen and ( max-width: 768px )
   .footer
+    &-container
+      max-width: 320px
+      
     &-items
       flex-direction: column
       font-size: 16px
