--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,12 +1,28 @@
 .header
-  position: fixed
   width: 100%
-  padding: 15px 0
-  background: #fff
+  height: 100px
   z-index: 10
+  position: relative
+  &-bg
+    position: fixed
+    background: #ffffff
+    top: 0
+    left: 0
+    z-index: -2
+    width: 100%
+    height: 100px
+  &-svg
+    z-index: -1
+    position: absolute
+    top: 0
+    left: 34%
+    max-height: 100%
   &_mobile
     display: none
   .container
+    position: fixed
+    padding: 15px 20px
+    width: 100%
     display: flex
     justify-content: space-between
     align-items: center
@@ -56,10 +72,38 @@
   .header
     padding: 10px 0
     &_mobile
-      display: none
+      padding-top: 25vh
+      padding-bottom: 10vh
+      position: absolute
+      width: 100vw
+      height: 100vh
+      background: #ffffff
+      top: 0
+      left: 0
+      flex-direction: column
+      justify-content: space-between
+      align-items: center
+      &_active
+        display: flex
+      &-menu
+        &__list
+          flex-direction: column
+          li
+            font-size: 25px
+            margin: 10px 0
+      &-contact
+        display: flex
+        flex-direction: column
+        align-items: center
+        .header-contact
+          &__link
+            font-size: 20px
+          &__button
+            font-size: 18px
     &-menu
       display: none
       &__button
+        z-index: 11
         display: block
         cursor: pointer
         position: relative
@@ -68,6 +112,7 @@
         span
           transform: translateY(-50%)
         span, &::after, &::before
+          transition: all 0.3s ease-out
           display: block
           width: 100%
           height: 3px
@@ -83,6 +128,17 @@
           content: ''
           top: auto
           bottom: 0
+        &_active
+          span
+            opacity: 0
+          &::after
+            left: 0
+            top: 50%
+            transform: rotate(135deg)
+          &::before
+            left: 0
+            top: 50%
+            transform: rotate(-135deg)
     &-contact
       display: none
 
